# copperspice

./: .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: davenche.yml  main.yml  patch.yml
cmake/: CopperSpiceConfigVersion.cmake
deploy/: CMakeLists.txt  cs-config.h
src/core/: CMakeLists.txt
src/core/global/: qexport.h
src/gui/: CMakeLists.txt
src/gui/graphicsview/: qgraphics_scene.cpp
src/network/: CMakeLists.txt
src/opengl/: CMakeLists.txt
src/plugins/printerdrivers/windows/: windowsprinter.cmake
src/tools/lconvert/: CMakeLists.txt
src/tools/lrelease/: CMakeLists.txt
src/tools/lupdate/: CMakeLists.txt
src/tools/rcc/: CMakeLists.txt
src/tools/uic/: CMakeLists.txt
src/xml/: CMakeLists.txt
